2006-12-29  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/adpcmds.c:
	* doc/src/ns_adp_parse.man:
	* doc/src/ns_adp_include.man: Updated so flags can be set/unset using
	ns_adp_ctl command only. ADP flags are saved before executing include or
	parse command and then restored.

2006-12-29  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/tcljob.c: Possible uninitilized usage of pointer
	* nsd/tclmisc.c: Fixed bug in ns_filestat which returned wrong ctime/mtime

	* nsd/nsd.h:
	* nsd/server.c:
	* nsd/adprequest.c:
	* nsd/adpcmds.c:
	* nsd/adpeval.c:
	* nsd/adpparse.c: Changed default mode of ADP to no cache, cache
	if endbled breaks all existing dynamic applications, with cache enabled
	special care must be taken in producing correct result and also
	cache does not account for query parameters, so dynamic ADP page
	cannot be cached if it depends on different query parameters. Setting
	it to no cache by default sets behaviour to 4.0 ADP processing. Caching 
	can be disabled also inside the script, AdpEval check for flags during
	page evaluation.

	* include.ns.h:
	* nsd/sock.h: Added 2 new public functions Ns_SockWrite and
	Ns_SockWriteV which will try to send all data provided

2006-12-27  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/adpcmds.c:
	* nsd/adpeval.c:
	* nsd/adpparse.c: In Tcl caching mode use uplevel
	with bytecode to evaluate proc on global level for
	easy integration with other ADP pages and other Tcl scripts
	running inside the same request

	* doc/src: Updated documentation files
	* configure.in: Updated the script to produce correct output on
	--help command

2006-12-25  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/adpcmds.c:
	* nsd/adpeval.c:
	* nsd/adpparse.c: Updated cached Tcl processing, make it conditional 
	compilation if cache is enabled

        * nsd/nsconf.c:
        * nsd/tcljob.c:
        * nsd/nsd.h: Made jobperthread also config parameter for easy system-wide