@@ -1,3 +1,14 @@
+2007-01-06  Vlad Seryakov  <seryakov@users.sf.net>
+
+	* nsd/nsconf.c: Made jobtimeout having default value of 300
+	seconds to exit unnecassary job threads
+	
+	* nsd/nsmain.c: Changed config file processing logic, if none is 
+	given the server will try to find nsd.tcl in the conf/ subdir 
+	taking the base path from executable. This requirements looks very
+	non-modern nowadays, Apache uses default but can take full path, for
+	example.
+
 2006-12-29  Vlad Seryakov  <seryakov@users.sf.net>
 
 	* nsd/adpcmds.c:
